# sid-germany

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  matplotlibrc  pyproject.toml  setup.cfg  setup.py  speed_up_snippets.ipynb  tox.ini
.github/workflows/: continuous-integration-workflow.yml
docs/: index.rst  rtd_environment.yml
docs/source/: api.rst  conf.py  index.rst  rki-model.ipynb  rtd_environment.yml
src/: __init__.py  calculate_moments.py  config.py  shared.py
src/contact_models/: contact_model_functions.py  get_contact_models.py  task_create_contact_params.py  task_plot_assortativity.py
src/create_initial_states/: add_weekly_ids.py  create_background_characteristics.py  create_contact_model_group_ids.py  create_group_transition_probs.py  create_initial_conditions.py  create_initial_immunity.py  create_initial_infections.py  create_rapid_test_unit_intervals.py  (+6 more)
src/events/: events.py
tests/: age_groups.pkl  params.pkl  test_contact_model_functions.py  test_create_background_characteristics.py  test_create_contact_model_group_ids.py  test_create_contact_params.py  test_create_initial_conditions.py  test_create_initial_infections.py  test_create_rapid_test_statistics.py  test_find_people_to_vaccinate.py  test_get_contact_models.py  test_gridsearch.py  test_initial_immunity.py  test_make_educ_group_columns.py  test_params_scenarios.py  test_rapid_test_reactions.py  test_rapid_tests.py  test_scenario_creation.py  test_shared.py  test_susceptibility.py  test_testing_models.py  test_vaccination_priority.py
(+206 files in other folders)
