[metadata]
name = sid_germany
description = Research code for applying sid to Germany.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Janos Gabler, Tobias Raabe, Klara Röhrl
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    = .
zip_safe = False

[options.packages.find]
where = .

[check-manifest]
ignore =
    src/_version.py
